Fixing color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,13 +94,14 @@ body {
 }
 
 #headerContainer {
-  background: rgba(243, 160, 50, 0.75);
+  background: rgba(209, 126, 31, 0.75);
   background: linear-gradient(
     to bottom,
-    rgb(198, 124, 26) 0%,
-    rgba(234, 140, 16, 0.8) 80%,
-    rgba(243, 160, 50, 0.5) 100%
+    rgb(209, 126, 31) 0%,
+    rgba(190, 105, 20, 0.8) 80%,
+    rgba(234, 140, 16, 0.5) 100%
   );
+
   width: 100%;
   height: 68px;
 }
@@ -179,7 +180,7 @@ body {
   font-size: 4.2em;
   font-weight: bold;
   text-align: center;
-  text-shadow: 0 0 5px #000;
+  text-shadow: 0 0 8px #000;
   margin: 0;
 }
 
@@ -194,15 +195,18 @@ body {
 }
 
 .orange {
-  background-color: #f3a032;
+  background-color: #d17e1f;
+  color: white;
   margin-left: 0;
 }
 
-.accentBlock h3 {
+.accentBlock h2 {
   color: #282828;
   font-size: 2em;
   font-weight: bold;
   margin: 0 0 10px 0;
+  text-align: left;
+  line-height: 1.15;
 }
 
 .accentBlock p {
@@ -213,7 +217,7 @@ body {
 
 .accentBlock a {
   color: #fff;
-  background-color: #f3a032;
+  background-color: #d17e1f;
   font-size: 1.2em;
   font-weight: bold;
   padding: 10px 20px;
@@ -229,7 +233,7 @@ body {
   background-color: #ffffff;
 }
 
-.accentBlock.orange h3,
+.accentBlock.orange h2,
 .accentBlock.orange p {
   color: #ffffff;
 }
@@ -436,8 +440,8 @@ h2.roza {
     top: 0;
     background: linear-gradient(
       to top,
-      rgba(243, 160, 50, 0.9) 0,
-      rgba(198, 124, 26, 0.95) 100%
+      rgba(209, 126, 31, 0.9) 0%,
+      rgba(166, 97, 14, 0.95) 100%
     );
     border-right: 1px solid #c67c1a;
     border-bottom: 1px solid #c67c1a;
